fixed some bugs of incorrect url

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 # Backend API URL
-NUXT_PUBLIC_API_BASE_URL=http://localhost:3001
+NUXT_PUBLIC_API_BASE_URL=http://localhost:3001/api
+
+# App Domain (for tenant path/subdomain extraction)
+# Development: localhost:3003
+# Production: app.kataloga.kg or kataloga.kg
+NUXT_PUBLIC_APP_DOMAIN=localhost:3003
 
 # Environment
 NODE_ENV=development
