--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "nuxt build",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
