--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "test": "vitest --run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
@@ -23,8 +25,12 @@
   "devDependencies": {
     "@nuxt/types": "^2.17.3",
     "@types/node": "^20.10.0",
+    "@vitejs/plugin-vue": "^6.0.3",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^20.0.11",
     "sass": "^1.69.5",
     "typescript": "^5.3.2",
+    "vitest": "^4.0.15",
     "vue-tsc": "^2.2.10"
   }
 }
