--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^20.10.0",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vue/test-utils": "^2.4.6",
+    "fast-check": "^4.3.0",
     "happy-dom": "^20.0.11",
     "sass": "^1.69.5",
     "typescript": "^5.3.2",
